# beatmup

./: .dockerignore  .gitmodules  CLA.md  CMakeLists.txt  COPYING  README.md
.github/workflows/: android.yml  docs.yml  linux.yml  main.yml  python-package.yml  windows.yml
android/: .gitignore  build.gradle
android/app/: build.gradle
android/lib/: build.gradle  proguard-rules.pro
android/lib/src/main/cpp/: CMakeLists.txt  generate_headers.sh
android/lib/src/main/jni/: CMakeLists.txt  generate_headers.bat  generate_headers.sh
apps/: CMakeLists.txt
apps/basic/: CMakeLists.txt  app.cpp
apps/basic_rendering/: app.cpp
apps/benchmark/: app.cpp
apps/classify/: app.cpp
apps/flood_fill/: app.cpp
apps/resample/: app.cpp
apps/shaderer/: app.cpp
apps/tests/: app.cpp
apps/tools/: app.cpp
apps/x2/: app.cpp
core/: CMakeLists.in  CMakeLists.txt  basic_types.h  context.cpp  context.h  debug.h  environment.cpp  environment.h  exception.cpp  exception.h  geometry.cpp  geometry.h  memory.cpp  memory.h  parallelism.cpp  parallelism.h  platform.h  thread_pool.hpp
core/audio/: audio_signal.cpp  audio_signal.h  audio_signal_fragment.cpp  audio_signal_fragment.h  audio_signal_plot.cpp  audio_signal_plot.h  processing.h  sample_arithmetic.cpp  sample_arithmetic.h  signal.cpp  signal.h  signal_fragment.cpp  signal_fragment.h  signal_plot.cpp  signal_plot.h  source.cpp  source.h  wav_utilities.cpp  wav_utilities.h
core/bitmap/: abstract_bitmap.cpp  abstract_bitmap.h  bitmap_access.cpp  bitmap_access.h  color.h  content_lock.cpp  content_lock.h  converter.cpp  converter.h  crop.cpp  crop.h  internal_bitmap.cpp  internal_bitmap.h  interpolation.h  mask_bitmap_access.h  metric.cpp  metric.h  operator.cpp  operator.h  pixel_arithmetic.h  processing.h  resampler.cpp  resampler.h  resampler_tools.h  resampling_kernels.h  tools.cpp  tools.h
core/color/: color_spaces.cpp  color_spaces.h  colors.h  constants.h  matrix.cpp  matrix.h  packing.h
core/contours/: contours.cpp  contours.h
core/filters/: color_matrix.cpp  color_matrix.h  pixelwise_filter.cpp  pixelwise_filter.h  sepia.cpp  sepia.h  tuning.cpp  tuning.h
core/fragments/: fragment.cpp  fragment.h  sequence.cpp  sequence.h
core/gpu/: bgl.h  compute_program.cpp  compute_program.h  display_switch.cpp  display_switch.h  drm.hpp  float16.h  gpu_task.cpp  gpu_task.h  linear_mapping.cpp  linear_mapping.h  pipeline.cpp  pipeline.h  program.cpp  program.h  program_bank.cpp  program_bank.h  recycle_bin.cpp  recycle_bin.h  rendering_programs.cpp  rendering_programs.h  shaders.cpp  shaders.h  storage_buffer.cpp  storage_buffer.h  swapper.cpp  swapper.h  tensor.cpp  tensor.h  texture_handler.cpp  texture_handler.h  variables_bundle.cpp  variables_bundle.h
core/masking/: flood_fill.cpp  flood_fill.h  region_filling.cpp  region_filling.h
core/nnets/: classifier.cpp  classifier.h  conv2d.cpp  conv2d.h  dense.cpp  dense.h  deserialized_model.cpp  deserialized_model.h  gpu_bench.cpp  gpu_bench.h  image_sampler.cpp  image_sampler.h  inference.cpp  inference.h  inference_task.cpp  inference_task.h  model.cpp  model.h  operation.cpp  operation.h  pooling2d.cpp  pooling2d.h  softmax.cpp  softmax.h  storage.cpp  storage.h
core/pipelining/: custom_pipeline.cpp  custom_pipeline.h  multitask.cpp  multitask.h
core/scene/: layer_shader.cpp  layer_shader.h  renderer.cpp  renderer.h  rendering_context.cpp  rendering_context.h  rendering_programs.cpp  rendering_programs.h  scene.cpp  scene.h  shader_applicator.cpp  shader_applicator.h
core/shading/: image_shader.cpp  image_shader.h  shader_applicator.cpp  shader_applicator.h
core/utils/: array.h  bitmap_from_chunk.cpp  bitmap_from_chunk.h  bitmap_locker.cpp  bitmap_locker.h  bitset.h  bmp_file.cpp  bmp_file.h  chunkfile.cpp  chunkfile.h  file_input_stream.cpp  file_input_stream.h  fixed_point.h  image_resolution.cpp  image_resolution.h  input_stream.cpp  input_stream.h  listing.cpp  listing.h  lockable_object.h  profiler.cpp  profiler.h  progress_tracking.cpp  progress_tracking.h  string_builder.cpp  string_builder.h  string_utils.cpp  string_utils.h  utils.hpp
doc/: cpp.Doxyfile  java.Doxyfile
dockerfiles/: android.Dockerfile  linux.Dockerfile
docs/: conf.py  cpp.Doxyfile  java.Doxyfile  python.rst
docs/python/: .buildinfo  genindex.html  objects.inv  py-modindex.html  python.html  search.html  searchindex.js
jni/: CMakeLists.in  callback_task.cpp  callback_task.h  context_event_listener.cpp  context_event_listener.h  java_factory.cpp  java_factory.h  log.h  objectpool.h  wrapper.h  wrapper_audio.cpp  wrapper_core.cpp  wrapper_imag.cpp  wrapper_nnets.cpp
jni/android/: bitmap.cpp  bitmap.h  camera_texture.cpp  camera_texture.h  context.cpp  context.h  environment.cpp  environment.h  external_bitmap.cpp  external_bitmap.h  gl_utils.cpp  gl_utils.h  renderer_toolkit.h  sles_playback.cpp  sles_playback.h
jni/include/: Beatmup_Android_Context.h  Beatmup_Android_ExternalBitmap.h  Beatmup_Audio_HarmonicSource.h  Beatmup_Audio_Playback.h  Beatmup_Audio_Signal.h  Beatmup_Audio_Signal_Source.h  Beatmup_Bitmap_BadPixelFormat.h  Beatmup_Context.h  Beatmup_Imaging_BinaryOperation_Operation.h  Beatmup_Imaging_ColorMatrix.h  Beatmup_Imaging_Filters_ColorMatrixTransform.h  Beatmup_Imaging_Filters_ColorMatrixTransform_Preset.h  Beatmup_Imaging_Filters_PixelwiseFilter.h  Beatmup_Imaging_Filters_Sepia.h  Beatmup_Imaging_FloodFill.h  Beatmup_Imaging_Resampler.h  Beatmup_Imaging_Resampler_Mode.h  Beatmup_NNets_AbstractOperation.h  Beatmup_NNets_DeserializedModel.h  Beatmup_NNets_ImageSampler.h  Beatmup_NNets_InferenceTask.h  Beatmup_NNets_Model.h  Beatmup_NNets_Softmax.h  Beatmup_Object.h  Beatmup_Pipelining_CustomPipeline.h  Beatmup_Pipelining_TaskHolder.h  Beatmup_Rendering_Scene.h  Beatmup_Rendering_SceneRenderer.h  Beatmup_Rendering_SceneRenderer_OutputMapping.h  (+17 more)
lib/: CMakeLists.txt  beatmup.txt
lib/include/: libbeatmup.h  libbeatmup.h.template
lib/src/: libbeatmup.cpp  libbeatmup.cpp.template
python/: beatmup_keras.py  pip.txt  setup.py  test.py  test_nnets.py
(+2643 files in other folders)
