cmake_minimum_required(VERSION 3.2.1)
project (Apps)
function(add_app APP_NAME APP_SOURCES)
	add_executable(${APP_NAME} ${BEATMUP_SOURCES} ${APP_SOURCES})
	if (WIN32)
		set_property(TARGET ${APP_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${BEATMUP_ROOT_DIR})
  	elseif(USE_GLX)
  		add_dependencies(${APP_NAME} libglewmx_static)
	endif (WIN32)
endfunction()

set(PROFILE_PLATFORM_SPECIFIC_BITMAP ON)
include("../core/CMakeLists.in")

set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3")

add_app(BasicRendering    basic_rendering/app.cpp)
add_app(FloodFill         flood_fill/app.cpp)
add_app(Shaderer          shaderer/app.cpp)
add_app(Resample          resample/app.cpp)
